--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega168]
+[env:nanoatmega328]
 platform = atmelavr
-board = nanoatmega168
+board = nanoatmega328
 framework = arduino
 lib_deps = 
 	faboplatform/FaBo 202 9Axis MPU9250@^1.0.1
 	tomstewart89/BasicLinearAlgebra@^5.0
+debug_build_flags = -Os
