successfully communicated with the I2C bus at address 0x68, need to calibrate acccelerometer better

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 lib_deps = 
 	faboplatform/FaBo 202 9Axis MPU9250@^1.0.1
 	tomstewart89/BasicLinearAlgebra@^5.0
+	hideakitai/MPU9250@^0.4.8
 debug_build_flags = -Os
